---------------------------------------------------------------------------------------------------
Version: 3.0.3
Date: ????
  Bugfixes:
    - Fixed that you can delete a tape while drawing, causing various corrupted states. (#44)
    - Fixed a crash when attempting to remove a tape drawn by a player who no longer exists. (#43)
---------------------------------------------------------------------------------------------------
Version: 3.0.2
Date: 2025-01-07
  Bugfixes:
    - Fixed a crash when drawing a tape after the previous tape was deleted during drawing. (#38)
---------------------------------------------------------------------------------------------------
Version: 3.0.1
Date: 2024-12-18
  Bugfixes:
    - Fixed that the initial square of a tape would not respect the "draw on ground" setting. (#37)
    - Fixed that the tapeline tool would be put into your cursor whenever you used ANY selection tool. (#40)
    - Fixed that the tapeline tool would be put into your cursor whenever a tape was destroyed. (#39)
---------------------------------------------------------------------------------------------------
Version: 3.0.0
Date: 2024-12-16
  Changes:
    - Updated to Factorio 2.0.
    - Rewrote the mod from scratch.
    - Changed the "change divisor" hotkeys from shift + mousewheel to alt + mousewheel.
---------------------------------------------------------------------------------------------------
Version: 2.0.10
Date: 2023-10-14
  Changes:
    - Tape color settings use color picker widgets (#32).
---------------------------------------------------------------------------------------------------
Version: 2.0.9
Date: 2022-11-14
  Bugfixes:
    - Fixed a rare crash when changing controllers and changing the cursor stack on the same tick
---------------------------------------------------------------------------------------------------
Version: 2.0.8
Date: 2022-06-22
  Bugfixes:
    - Fixed that the 'not-selectable-in-game' flag was not set on the dummy entity